# dunea-templates

./: README.md  registry.json
fullstack/: .gitignore  BASE.md  Dockerfile.deploy  manifest.json  start.sh
fullstack/backend/: config.py  database.py  main.py  pyproject.toml  storage.py
fullstack/frontend/: index.html  pnpm-lock.yaml  vite.config.ts
fullstack/frontend/src/: main.tsx
fullstack/frontend/src/lib/: api.ts
fullstack/skills/: INDEX.md  auth.md  database.md  storage.md
landing/: BASE.md  manifest.json  start.sh
landing/frontend/: index.html  package.json
landing/frontend/src/: main.tsx  routes.tsx
landing/skills/: INDEX.md
