[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pymongo[srv]>=4.9.0",
    "certifi",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]
